# yasb

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  build_font_family_util.py  font_family_util_build.py  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  schema.json
.claude/: settings.local.json
.github/: FUNDING.yml  changelog-template.hbs  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/aw/: actions-lock.json
.github/changelog/: changelog.js
.github/workflows/: auto-issue-reply.yaml  build-trayhook.yml  close-inactive-issues.yaml  issue-triage.lock.yml  issue-triage.md  issue-triage.yaml  main.yml  pr-check.yaml  pr-comment.yaml  publish-wiki.yaml  publish-wiki.yml  sign-ygui.yaml  test.yaml  update-schema.yaml  windows-dev.yaml  windows-preview.yaml  windows.yaml  winget.yaml
demo/theme/: config.yaml  style.css
docs/: CLI.md  Configuration.md  Contributing.md  FAQ.md  Home.md  Installation.md  Keybindings.md  Styling.md  UI-Components.md  Writing-Widget.md  _Sidebar.md
docs/widgets/: (Widget)-Active-Windows-Title.md  (Widget)-Ai-Chat.md  (Widget)-Applications.md  (Widget)-Battery.md  (Widget)-Bluetooth.md  (Widget)-Brightness.md  (Widget)-Burp-Suite.md  (Widget)-CPU.md  (Widget)-Calendar.md  (Widget)-Cava.md  (Widget)-Claude-Usage.md  (Widget)-Clipboard.md  (Widget)-Clock.md  (Widget)-Codex-Usage.md  (Widget)-Control-Center.md  (Widget)-Copilot.md  (Widget)-Custom.md  (Widget)-Disk.md  (Widget)-Dnd.md  (Widget)-GPU.md  (Widget)-Github.md  (Widget)-GlazeWM-Binding-Mode.md  (Widget)-GlazeWM-Tiling-Direction.md  (Widget)-GlazeWM-Workspaces.md  (Widget)-Glucose-Monitor.md  (Widget)-Grouper.md  (Widget)-Home.md  (Widget)-Image-Gif.md  (Widget)-Komorebi-Control.md  (Widget)-Komorebi-Layout.md  (Widget)-Komorebi-Stack.md  (Widget)-Komorebi-Workspaces.md  (Widget)-Language.md  (Widget)-Launchpad.md  (Widget)-Libre-HW-Monitor.md  (Widget)-Media.md  (Widget)-Memory.md  (Widget)-Menu.md  (Widget)-Microphone.md  (Widget)-Notes.md  (+27 more)
src/: build.py  cli.py  config.yaml  config_schema.json  env.py  env_loader.py  main.py  pretty_log.py  settings.py  styles.css  version.txt  yasb.vbs
src/core/: app_controller.py  application.py  bar.py  bar_helper.py  bar_manager.py  config.py  console.py  event_enums.py  event_service.py  global_state.py  log.py  task.py  tray.py  watcher.py
src/core/defaults/: config.py  styles.py
src/core/events/: __init__.py  base.py  komorebi.py  service.py  win32.py
src/core/setup/: bar_config.py  builder.py  widgets_config.py  widgets_styles.py
src/core/ui/: color_tokens.py  style.py  theme.py  tokens.py
src/core/ui/components/: button.py  card.py  content_dialog.py  dropdown.py  indicator.py  info_bar.py  input_dialog.py  link.py  loader.py  slider.py  text_block.py  toggle_switch.py
src/core/ui/views/: about.py  themes.py  updater.py  view_base.py  welcome.py
src/core/ui/windows/: about.py  themes.py  update_dialog.py
src/core/utils/: alert_dialog.py  circular_progress_bar.py  cli.py  cli_client.py  cli_server.py  controller.py  css_processor.py  markdown.py  process.py  progress_bar.py  qobject.py  shell_utils.py  singleton.py  stat_popup.py  system.py  system_colors.py  themes.py  time_utils.py  tooltip.py  update_check.py  update_service.py  utilities.py  validation_errors.py  widget_builder.py  yasb_cli.py  yasb_service.py
src/core/utils/font_family_util/: CMakeLists.txt  font_family_util.cpp  font_family_util.hpp  font_family_util.py  logging.cpp  logging.hpp
src/core/utils/glazewm/: client.py
src/core/utils/komorebi/: client.py  event_listener.py
src/core/utils/systray/: systray_widget.py  tasks_service.py  tray_monitor.py  utils.py  win_types.py  win_wrappers.py
src/core/utils/traffic/: connection_monitor.py  traffic_manager.py
src/core/utils/widgets/: animation_manager.py  circular_progress_bar.py  power.py  recycle_bin_monitor.py  update_check.py  wallpapers_gallery.py  windows_notification.py
src/core/utils/widgets/ai_chat/: attachment_manager.py  chat_render.py  chat_session.py  client.py  client_helper.py  constants.py  context_menu_service.py  copilot_client.py  copilot_server.py  image_helper.py  input_controller.py  message_composer.py  openai_client.py  provider_model_manager.py  stream_ui_controller.py  stream_worker_manager.py  syntax_highlight.py  ui_components.py  ui_helpers.py
src/core/utils/widgets/copilot/: api.py
src/core/utils/wifi/: wifi_widgets.py
src/core/utils/win32/: active_window_border.py  app_aumid.py  app_bar.py  app_icons.py  app_loader.py  app_uwp.py  aumid.py  aumid_icons.py  backdrop.py  bindings.py  blurWindow.py  constants.py  error_check.py  event_listener.py  hotkeys.py  icon_extractor.py  media.py  pe_icons.py  power.py  structs.py  system_function.py  typecheck.py  utilities.py  utils.py  win32_accent.py  window_actions.py  windows.py
src/core/validation/: TEST_generate_config_schema.py  bar.py  config.py  deprecation.py  export_schema.py  utilities.py
src/core/validation/widgets/: base_model.py
src/core/widgets/: base.py  registry.py
src/core/widgets/glazewm/: binding_mode.py  tiling_direction.py  workspaces.py
src/core/widgets/komorebi/: active_layout.py  control.py  stack.py  workspaces.py
src/core/widgets/services/systray/hook/: CMakeLists.txt  build_dll.bat  trayhook.cpp  version.rc
src/core/widgets/shellwright/: workspaces.py
src/core/widgets/yasb/: active_window.py  ai_chat.py  applications.py  battery.py  bluetooth.py  brightness.py  burp_suite.py  calendar.py  cava.py  claude_usage.py  clipboard.py  clock.py  codex_usage.py  control_center.py  copilot.py  cpu.py  custom.py  disk.py  dnd.py  github.py  glucose_monitor.py  gpu.py  grouper.py  home.py  image_gif.py  language.py  launchpad.py  libre_monitor.py  media.py  memory.py  menu.py  microphone.py  notes.py  notifications.py  obs.py  open_meteo.py  overlay_container.py  pomodoro.py  power_menu.py  power_plan.py  (+21 more)
tests/: test_prayer_times_import.py
(+335 files in other folders)
