[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "YASB"
dynamic = ["version"]
description = "Yet Another Status Bar - A highly configurable Windows status bar written in Python."
authors = [
    { name = "AmN" },
]
license = "MIT"
readme = "README.md"
requires-python = ">= 3.14"
dependencies = [
    "pyqt6==6.10.0",
    "cerberus",
    "humanize",
    "psutil==7.1.3",
    "pywin32",
    "pyyaml",
    "holidays==0.86",
    "watchdog",
    "pycaw==20251023",
    "pillow==12.0.0",
    "icoextract==0.2.0",
    "qasync",
    "obs-websocket-py",
    "openai",
    "pyvda",
    "python-dotenv",
    "tzdata",
    "winmica",
    "winrt.windows.foundation",
    "winrt.windows.foundation.collections",
    "winrt.windows.data.xml.dom",
    "winrt.windows.media",
    "winrt.windows.media.control",
    "winrt.windows.management.deployment",
    "winrt.windows.applicationmodel",
    "winrt.windows.networking",
    "winrt.windows.networking.connectivity",
    "winrt.windows.storage",
    "winrt.windows.storage.streams",
    "winrt.windows.ui.notifications",
    "winrt.windows.ui.notifications.management",
    "winrt.windows.devices.wifi",
    "winrt.windows.security.credentials",
    "screen-brightness-control==0.24.3",
]

[project.urls]
Homepage = "https://github.com/amnweb/yasb"
Documentation = "https://github.com/amnweb/yasb/wiki"
Repository = "https://github.com/amnweb/yasb"
Issues = "https://github.com/amnweb/yasb/issues"
Changelog = "https://github.com/amnweb/yasb/releases/latest"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "ruff",
    "pyqt6-stubs",
    "types-pillow",
]
packaging = [
    "cx-freeze==8.5.0",
    "python-msilib @ git+https://github.com/amnweb/python-msilib.git"
]
[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "src/settings.py"
pattern = "BUILD_VERSION = \"(?P<version>[^\"]+)\""

[tool.hatch.build.targets.wheel]
packages = ["src/core"]

[tool.ruff]
line-length = 120
target-version = "py314"
extend-exclude = [
    "__pycache__",
    ".github",
    ".vscode",
    "build",
    "docs",
    "demo"
]

[tool.ruff.lint]
ignore = [
    "F405",
    "F403",
    "E741",
]
select = ["I", "F"]
fixable = ["ALL"]

[tool.ruff.format]
docstring-code-format     = true
quote-style               = "double"
indent-style              = "space"
skip-magic-trailing-comma = false
