[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "YASB"
dynamic = ["version"]
description = "Yet Another Status Bar - A highly configurable Windows status bar written in Python."
authors = [
    { name = "AmN" },
]
license = "MIT"
readme = "README.md"
requires-python = ">= 3.14"
dependencies = [
    "pyqt6==6.10.2",
    "pydantic==2.12.5",
    "humanize==4.15.0",
    "pywin32==311",
    "pyyaml==6.0.3",
    "holidays==0.91",
    "watchdog==6.0.0",
    "pycaw==20251023",
    "pillow==12.1.1",
    "icoextract==0.2.0",
    "qasync==0.28.0",
    "github-copilot-sdk==0.1.25",
    "openai==2.21.0",
    "pyvda==0.5.0",
    "python-dotenv==1.2.1",
    "tzdata==2025.3",
    "winmica==1.0.3",
    "winrt.windows.foundation==3.2.1",
    "winrt.windows.foundation.collections==3.2.1",
    "winrt.windows.data.xml.dom==3.2.1",
    "winrt.windows.media==3.2.1",
    "winrt.windows.media.control==3.2.1",
    "winrt.windows.management.deployment==3.2.1",
    "winrt.windows.applicationmodel==3.2.1",
    "winrt.windows.applicationmodel.core==3.2.1",
    "winrt.windows.applicationmodel.datatransfer==3.2.1",
    "winrt.windows.networking==3.2.1",
    "winrt.windows.networking.connectivity==3.2.1",
    "winrt.windows.storage==3.2.1",
    "winrt.windows.storage.streams==3.2.1",
    "winrt.windows.ui.notifications==3.2.1",
    "winrt.windows.ui.notifications.management==3.2.1",
    "winrt.windows.devices.wifi==3.2.1",
    "winrt.windows.security.credentials==3.2.1",
]

[project.urls]
Homepage = "https://github.com/amnweb/yasb"
Documentation = "https://github.com/amnweb/yasb/wiki"
Repository = "https://github.com/amnweb/yasb"
Issues = "https://github.com/amnweb/yasb/issues"
Changelog = "https://github.com/amnweb/yasb/releases/latest"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "ruff>=0.15.0",
    "pyqt6-stubs",
    "types-pillow",
]
packaging = [
    "cx-freeze==8.6.0"
]
[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "src/settings.py"
pattern = "BUILD_VERSION = \"(?P<version>[^\"]+)\""

[tool.hatch.build.targets.wheel]
packages = ["src/core"]

[tool.ruff]
line-length = 120
target-version = "py314"
extend-exclude = [
    "__pycache__",
    ".github",
    ".vscode",
    "build",
    "docs",
    "demo"
]

[tool.ruff.lint]
ignore = [
    "F405",
    "F403",
    "E741",
]
select = ["I", "F"]
fixable = ["ALL"]

[tool.ruff.format]
docstring-code-format     = true
quote-style               = "double"
indent-style              = "space"
skip-magic-trailing-comma = false
